--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1 id="title">Quiz App</h1>
+    <h1>Timer :<span id="timer">30</span></h1>
+  </header>
   <!-- Welcome Screen -->
   <!-- <div class="container active" id="welcome-screen">
     <h1>Quiz App</h1>
@@ -16,14 +20,14 @@
 
   <!-- Quiz Screen -->
   <div class="container" id="quiz-screen">
-    <div class="question">What is the capital of France?</div>
+    <!-- <div class="question">What is the capital of France?</div>
     <div class="options">
       <div class="option">London</div>
       <div class="option">Berlin</div>
       <div class="option">Paris</div>
       <div class="option">Madrid</div>
     </div>
-    <button onclick="nextQuestion()" class="next-btn">Next</button>
+    <button onclick="nextQuestion()" class="next-btn">Next</button> -->
   </div>
 
   <!-- Result Screen -->
